<?xml version="1.0" encoding="utf-8"?>
<layout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.StartFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/startTopTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startTopText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/exerciseRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exerciseRadioGroup" />

        <RadioGroup
            android:id="@+id/exerciseRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/playButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTopTextView">

            <RadioButton
                android:id="@+id/addRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addRadioText" />

            <RadioButton
                android:id="@+id/multRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multRadioText" />

            <RadioButton
                android:id="@+id/divRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/divRadioText" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
</layout>